# deta-rust-sdk

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: deta.rs  errors.rs  lib.rs
